36-dooms-control-plane/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x06-dooms-control-plane-svc
  labels:
    app.kubernetes.io/name: x06-dooms-control-plane
    challenge: x06
spec:
  type: ClusterIP
  selector:
    app: x06-dooms-control-plane
  ports:
  - name: http
    port: 80
    targetPort: 80
